--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ button {
   min-height: 100%;
   display: flex;
   align-items: flex-end;
-  justify-content: left;
+  justify-content: center;
   padding: 25px;
 }
 #controls div {
