--- a/style.css
+++ b/style.css
@@ -13,6 +13,18 @@ button {
   cursor: pointer;
   border: none;
 }
+
+#introduction {
+  width: 200px;
+  height: 150px;
+  position: absolute;
+  font-weight: 600;
+  font-size: 0.8em;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  text-align: center;
+  transition: opacity 2s;
+}
+
 #counter {
   position: absolute;
   top: 20px;
