--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ button {
   font-size: 0.8em;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
+  justify-content: center;
   transition: opacity 2s;
 }
 
